--- a/panel/assets/assets/css/custom.css
+++ b/panel/assets/assets/css/custom.css
@@ -16,6 +16,13 @@ td, th {
     width: 100px;
 }
 
+.w150 {
+    width: 150px;
+}
+.w200 {
+    width: 200px;
+}
+
 .sortable {
     cursor: move;
 }
