--- a/panel/assets/assets/css/custom.css
+++ b/panel/assets/assets/css/custom.css
@@ -22,6 +22,12 @@ td, th {
 .w200 {
     width: 200px;
 }
+.w250 {
+    width: 250px;
+}
+.w275 {
+    width: 275px;
+}
 .w300 {
     width: 300px;
 }
